@@ -5,15 +5,47 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
+import org.scray.integration.ai.agent.AiIntegrationAgent;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 public class RestClient {
+
+	private final Logger logger = LoggerFactory.getLogger(AiIntegrationAgent.class);
+
+	private URI url = null;
+
+	public RestClient() {
+
+		String scraySyncApiUrl = System.getenv("SCRAY_SYNC_API_URL");
+
+		if (scraySyncApiUrl != null && !scraySyncApiUrl.isEmpty()) {
+
+			try {
+				this.url = new URI(scraySyncApiUrl);
+			} catch (URISyntaxException e) {
+				logger.warn("SCRAY_SYNC_API_URL is not a valid URL {}", url);
+			}
+
+		} else {
+			try {
+				this.url = new URI("http://localhost:8082");
+			} catch (URISyntaxException e) {
+				e.printStackTrace();
+			}
+		}
+	}
 
 	public String getData() throws IOException {
 		String output = null;
 
-		URL url = new URL("http://ml-integration.research.dev.seeburger.de:8082/sync/versioneddata/all/latest");
-		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+		HttpURLConnection conn = (HttpURLConnection) url.resolve("sync/versioneddata/all/latest").toURL()
+				.openConnection();
 		conn.setRequestMethod("GET");
 		conn.setRequestProperty("Accept", "application/json");
 		if (conn.getResponseCode() != 200) {
@@ -29,17 +61,16 @@ public class RestClient {
 	}
 
 	public void putData(String data) throws IOException {
-		URL url = new URL("http://ml-integration.research.dev.seeburger.de:8082/sync/versioneddata/latest");
-		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+		HttpURLConnection conn = (HttpURLConnection) url.resolve("/sync/versioneddata/latest").toURL().openConnection();
 		conn.setRequestMethod("PUT");
 		conn.setRequestProperty("Content-Type", "application/json");
 		conn.setRequestProperty("Accept", "application/json");
 		conn.setDoOutput(true);
 
-		try(OutputStream os = conn.getOutputStream()) {
-		    byte[] input = data.getBytes("utf-8");
-		    os.write(input, 0, input.length);
-		} catch(Exception e) {
+		try (OutputStream os = conn.getOutputStream()) {
+			byte[] input = data.getBytes("utf-8");
+			os.write(input, 0, input.length);
+		} catch (Exception e) {
 			e.printStackTrace();
 		}
 
